# pedestrian_detector_calibrated

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_batch_pets_gt.py  run_batch_pets_initial.py  run_batch_pets_optimized.py  run_batch_towncentre_initial.py  run_batch_towncentre_opt.py
config/: pets.json  towncentre_gt.json
include/: bounding_box.h  image_directory.h  image_sequence.h  pedestrian_detector.h  sys_utils.h  util.h  video_file.h  video_stream.h
src/: bounding_box.cpp  image_directory.cpp  image_sequence.cpp  main.cpp  pedestrian_detector.cpp  sys_utils.cpp  util.cpp  video_file.cpp  video_stream.cpp
